--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
       <div id="experiencia" class="row marte">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Nuestra experiencia</h2>
-          <p>Lucas ipsum dolor sit amet skywalker aayla cade zabrak mandalorians lobot grievous skywalker hoth anakin. Qui-gonn coruscant jinn watto organa amidala jango darth mon. Antilles wampa windu palpatine skywalker jabba moff darth. Moff antilles vader mon kenobi coruscant darth padmé dantooine. Mandalorians kashyyyk wedge padmé sidious organa biggs. Coruscant sith chewbacca fisto solo. Biggs moff darth calamari ahsoka organa droid lando. Calrissian yoda jade wicket organa organa moff hutt naboo. Solo kashyyyk windu organa thrawn.</p>
+          <p>
+            Cirex ofrece a nuestros clientes una forma de vivir nuevas emociones en diferentes lugares del mundo.
+            Con el gran atractivo de contar con un acompañante local y con unos gustos y aficiones acordes a lo que buscamos que harán de nuestra experiencia más placentera.
+          </p>
+          <p>No sólo eso, sino que el conocer a otras personas afines llega a ser el principal motivo y el lugar, un extra.</p>
         </div>
       </div>
       <div class="row img-marte"></div>
@@ -70,7 +74,7 @@
       <div id="viaje" class="row viaje">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>El viaje</h2>
-          <p>Lucas ipsum dolor sit amet artaru dat owen naberrie kenobi boba gorog dunhausen tatooine unduli. Dagobah bail anakin even iridonian kyle darth. Qu saffa secura abregado. Chistori hutt plo hapan jan nien d8 ree-yees. Aayla massans t88 utapaun sith baba illum shawda. Gordin massassi skywalker owen. Isolder solo conan qu. Orus kasan rahm pau'an dexter. Haako nute carlist oppo r2-d2 ogemite arkanis kel. Shi'ido halla vratix kamino. Dulok daala jax balosar omwati elomin. Psadan sanyassan noa shado r4-p17 moff.</p>
+          <p>El viajar nunca había sido tan fácil y económico.  Conoce nuevos lugares y personas creando nuevos lazos de amistad con personas de todo el mundo fomentando la facilidad de viajar gracias a un sistema recíproco de hospedaje-guía.</p>
         </div>
       </div>
       <div class="row img-viaje"></div>
@@ -84,7 +88,7 @@
               <p>1. Seguro<br><i class="fa fa-id-card-o funcionamiento-icon"></i></p>
             </div>
             <div class="col-xs-12 col-md-4">
-              <p>2. Perfiles y valoración<br><i class="fa fa-star funcionamiento-icon"></i><i class="fa fa-star funcionamiento-icon"></i><i class="fa fa-star funcionamiento-icon"></i><i class="fa fa-star funcionamiento-icon"></i><i class="fa fa-star-half-o funcionamiento-icon"></i></p>
+              <p>2. Perfiles y valoración<br><i class="fa fa-star funcionamiento-icon"></i><i class="fa fa-star funcionamiento-icon"></i><i class="fa fa-star-half-o funcionamiento-icon"></i></p>
             </div>
             <div class="col-xs-12 col-md-4">
               <p>3. Atención 24h<br><i class="fa fa-volume-control-phone funcionamiento-icon"></i></p>
@@ -95,14 +99,15 @@
       <div id="testimonios" class="row testimonios">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Testimonios</h2>
-          <p>Lucas ipsum dolor sit amet artaru dat owen naberrie kenobi boba gorog dunhausen tatooine unduli. Dagobah bail anakin even iridonian kyle darth. Qu saffa secura abregado. Chistori hutt plo hapan jan nien d8 ree-yees. Aayla massans t88 utapaun sith baba illum shawda. Gordin massassi skywalker owen. Isolder solo conan qu. Orus kasan rahm pau'an dexter. Haako nute carlist oppo r2-d2 ogemite arkanis kel. Shi'ido halla vratix kamino. Dulok daala jax balosar omwati elomin. Psadan sanyassan noa shado r4-p17 moff.</p>
+          <p>Podemos contate mil y una maravillas de nuestro servicio, de como además de facilitar conocer mundo nos permite iniciar nuevas amistades con otras personas.  Pero nadie mejor que nuestros clientes para ilustraos: </p>
           <div class="row">
             <div class="col-xs-12 col-lg-4">
               <figure>
                 <picture><img src="images/testimonio1.jpg" alt="Testimonio 1" class="img-responsive img-circle avatar"></picture>
                 <figcaption>
                   <h3>Testimonio 1</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt excepturi nemo laboriosam illum expedita ratione molestias eaque saepe placeat, commodi aliquam, neque obcaecati possimus quae ad magnam nam vel omnis.</p>
+                  <p>Tengo que reconocer que soy muy difícil de aguantar por lo que he tenido varios problemas en casas de alojamientos.</p>
+                  <p>Gracias a Cirex encuentro personas más afines a mi que no me echan de la casa a las pocas horas de conocerme.</p>
                 </figcaption>
               </figure>
             </div>
@@ -111,7 +116,7 @@
                 <picture><img src="images/testimonio2.jpg" alt="Testimonio 2" class="img-responsive img-circle avatar"></picture>
                 <figcaption>
                   <h3>Testimonio 2</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt excepturi nemo laboriosam illum expedita ratione molestias eaque saepe placeat, commodi aliquam, neque obcaecati possimus quae ad magnam nam vel omnis.</p>
+                  <p>Me encanta viajar, pero me gusta más conocer a otras personas. Gracias al buscador de personas puedo hacer nuevas amistades a la vez que descubro mundo.</p>
                 </figcaption>
               </figure>
             </div>
@@ -120,7 +125,8 @@
                 <picture><img src="images/testimonio3.jpg" alt="Testimonio 3" class="img-responsive img-circle avatar"></picture>
                 <figcaption>
                   <h3>Testimonio 3</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt excepturi nemo laboriosam illum expedita ratione molestias eaque saepe placeat, commodi aliquam, neque obcaecati possimus quae ad magnam nam vel omnis.</p>
+                  <p>Viajar, conocer mundo, conocer culturas, conocer gente.  Ahora todo es mucho más fácil y económico.</p>
+                  <p>Además hago amistades que me encanta que vengan a visitarme... no una, sino las veces que quieran.</p>
                 </figcaption>
               </figure>
             </div>
@@ -134,14 +140,19 @@
       <div class="footer-above">
         <div class="container">
           <div class="row">
-            <div class="footer-col col-md-6">
+            <div class="footer-col col-md-4">
               <h3>Redes sociales</h3>
               <div><a href="#" class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span></a><a href="#" class="btn btn-social-icon btn-twitter"><span class="fa fa-twitter"></span></a><a href="#" class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram"></span></a></div>
             </div>
-            <div class="footer-col col-md-6">
-              <h3>Contacto</h3>
-              <P>Se libre de contactar conmigo por cualquiera de los medios, aunque lo más rápido es mediante mi e-mail.</p></P>
+            <div class="footer-col col-md-4">
+              <h3>Política de empresa</h3><a href="#" class="link-politica">Términos y condiciones</a><br><a href="#" class="link-politica">Política de privacidad</a><br><a href="#" class="link-politica">Política de devoluciones</a><br><a href="#" class="link-politica">Menciones legales</a>
             </div>
+            <div class="footer-col col-md-4">
+              <h3>Contacto</h3><i class="fa fa-home"> </i> C\Falsa 123, Málaga<br><i class="fa fa-envelope"> </i> support@cirex.co<br><i class="fa fa-phone-square"> </i> 678 123 123
+            </div>
+          </div>
+          <div class="row">
+            <p class="footer-copy">Copyright © Cirex 2017</p>
           </div>
         </div>
       </div>
