--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
       <div id="testimonios" class="row testimonios">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Testimonios</h2>
-          <p>Podemos contate mil y una maravillas de nuestro servicio, de como además de facilitar conocer mundo nos permite iniciar nuevas amistades con otras personas.  Pero nadie mejor que nuestros clientes para ilustraos: </p>
+          <p>Podemos contarte mil y una maravillas de nuestro servicio, de como además de facilitar conocer mundo nos permite iniciar nuevas amistades con otras personas.  Pero nadie mejor que nuestros clientes para ilustraos: </p>
           <div class="row">
             <div class="col-xs-12 col-lg-4">
               <figure>
                 <picture><img src="images/testimonio1.jpg" alt="Testimonio 1" class="img-responsive img-circle avatar"></picture>
                 <figcaption>
                   <h3>Testimonio 1</h3>
-                  <p>Tengo que reconocer que soy muy difícil de aguantar por lo que he tenido varios problemas en casas de alojamientos.</p>
+                  <p>Tengo que reconocer que soy muy difícil de aguantar por lo que he tenido varios problemas en casas de alojamiento.</p>
                   <p>Gracias a Cirex encuentro personas más afines a mi que no me echan de la casa a las pocas horas de conocerme.</p>
                 </figcaption>
               </figure>
