--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="text-head">
         <h1 class="logo-font">  CIREX</h1>
         <h2>Intercambio cultural de emociones</h2>
-        <div><a class="btn btn-social btn-facebook btn-header"><span class="fa fa-twitter"></span>Regístrate con Facebook</a></div>
+        <div><a class="btn btn-social btn-facebook btn-header"><span class="fa fa-facebook"></span>Regístrate con Facebook</a></div>
         <div><a class="btn btn-social btn-twitter btn-header"><span class="fa fa-twitter"></span>Regístrate con Twitter</a></div>
       </div>
     </header>
