--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div id="viaje" class="row viaje">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>El viaje</h2>
-          <p>El viajar nunca había sido tan fácil y económico.  Conoce nuevos lugares y personas creando nuevos lazos de amistad con personas de todo el mundo fomentando la facilidad de viajar gracias a un sistema recíproco de hospedaje-guía.</p>
+          <p>El viajar nunca había sido tan fácil y económico.  Conoce lugares y personas creando nuevos lazos de amistad con personas de todo el mundo fomentando la facilidad de viajar gracias a un sistema recíproco de hospedaje-guía.</p>
         </div>
       </div>
       <div class="row img-viaje"></div>
@@ -99,15 +99,19 @@
       <div id="testimonios" class="row testimonios">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Testimonios</h2>
-          <p>Podemos contarte mil y una maravillas de nuestro servicio, de como además de facilitar conocer mundo nos permite iniciar nuevas amistades con otras personas.  Pero nadie mejor que nuestros clientes para ilustraos: </p>
+          <p>Podemos contarte mil y una maravillas de nuestro servicio, de como además de facilitar y conocer mundo nos permite iniciar nuevas amistades con otras personas.  Pero nadie mejor que nuestros clientes para ilustraos: </p>
           <div class="row">
             <div class="col-xs-12 col-lg-4">
               <figure>
                 <picture><img src="images/testimonio1.jpg" alt="Testimonio 1" class="img-responsive img-circle avatar"></picture>
                 <figcaption>
-                  <h3>Testimonio 1</h3>
-                  <p>Tengo que reconocer que soy muy difícil de aguantar por lo que he tenido varios problemas en casas de alojamiento.</p>
-                  <p>Gracias a Cirex encuentro personas más afines a mi que no me echan de la casa a las pocas horas de conocerme.</p>
+                  <blockquote>
+                    <p>Tengo que reconocer que soy muy difícil de aguantar por lo que he tenido varios problemas en casas de alojamiento.</p>
+                    <p>Gracias a Cirex encuentro personas más afines a mi que no me echan de la casa a las pocas horas de conocerme.</p>
+                    <footer>
+                      <cite title="Testimonio">Sheldon Cooper</cite>
+                    </footer>
+                  </blockquote>
                 </figcaption>
               </figure>
             </div>
@@ -115,8 +119,12 @@
               <figure>
                 <picture><img src="images/testimonio2.jpg" alt="Testimonio 2" class="img-responsive img-circle avatar"></picture>
                 <figcaption>
-                  <h3>Testimonio 2</h3>
-                  <p>Me encanta viajar, pero me gusta más conocer a otras personas. Gracias al buscador de personas puedo hacer nuevas amistades a la vez que descubro mundo.</p>
+                  <blockquote>
+                    <p>Me encanta viajar, pero me gusta más conocer a otras personas. Gracias al buscador de personas puedo hacer nuevas amistades a la vez que descubro mundo.</p>
+                    <footer>
+                      <cite title="Testimonio">Mia Sheridan</cite>
+                    </footer>
+                  </blockquote>
                 </figcaption>
               </figure>
             </div>
@@ -124,9 +132,13 @@
               <figure>
                 <picture><img src="images/testimonio3.jpg" alt="Testimonio 3" class="img-responsive img-circle avatar"></picture>
                 <figcaption>
-                  <h3>Testimonio 3</h3>
-                  <p>Viajar, conocer mundo, conocer culturas, conocer gente.  Ahora todo es mucho más fácil y económico.</p>
-                  <p>Además hago amistades que me encanta que vengan a visitarme... no una, sino las veces que quieran.</p>
+                  <blockquote>
+                    <p>Viajar, conocer mundo, conocer culturas, conocer gente.  Ahora todo es mucho más fácil y económico.</p>
+                    <p>Además hago amistades que me encanta que vengan a visitarme... no una, sino las veces que quieran.</p>
+                    <footer>
+                      <cite title="Testimonio">John Doe</cite>
+                    </footer>
+                  </blockquote>
                 </figcaption>
               </figure>
             </div>
