--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     <main class="container-fluid">
       <div id="experiencia" class="row marte">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <h2>Nuestra experiencia</h2>
+          <!--h2 Nuestra experiencia-->
+          <h2>Hospédate gratis en el lugar del mundo que tú elijas y con quien tú elijas</h2>
           <p>
             Cirex ofrece a nuestros clientes una forma de vivir nuevas emociones en diferentes lugares del mundo.
             Con el gran atractivo de contar con un acompañante local y con unos gustos y aficiones acordes a lo que buscamos que harán de nuestra experiencia más placentera.
@@ -88,7 +89,7 @@
               <p>1. Seguro<br><i class="fa fa-id-card-o funcionamiento-icon"></i></p>
             </div>
             <div class="col-xs-12 col-md-4">
-              <p>2. Perfiles y valoración<br><i class="fa fa-star funcionamiento-icon"></i><i class="fa fa-star funcionamiento-icon"></i><i class="fa fa-star-half-o funcionamiento-icon"></i></p>
+              <p>2. Perfiles y valoración<br><span class="star-font"><i class="fa fa-star funcionamiento-icon"></i><i class="fa fa-star funcionamiento-icon"></i><i class="fa fa-star-half-o funcionamiento-icon"></i></span></p>
             </div>
             <div class="col-xs-12 col-md-4">
               <p>3. Atención 24h<br><i class="fa fa-volume-control-phone funcionamiento-icon"></i></p>
@@ -106,8 +107,8 @@
                 <picture><img src="images/testimonio1.jpg" alt="Testimonio 1" class="img-responsive img-circle avatar"></picture>
                 <figcaption>
                   <blockquote>
-                    <p>Tengo que reconocer que soy muy difícil de aguantar por lo que he tenido varios problemas en casas de alojamiento.</p>
-                    <p>Gracias a Cirex encuentro personas más afines a mi que no me echan de la casa a las pocas horas de conocerme.</p>
+                    <p> <i class="fa fa-quote-left fa-3x fa-pull-left"></i>Tengo que reconocer que soy muy difícil de aguantar por lo que he tenido varios problemas en casas de alojamiento.</p>
+                    <p>Gracias a Cirex encuentro personas más afines a mi que no me echan de la casa a las pocas horas de conocerme".</p>
                     <footer>
                       <cite title="Testimonio">Sheldon Cooper</cite>
                     </footer>
@@ -120,7 +121,7 @@
                 <picture><img src="images/testimonio2.jpg" alt="Testimonio 2" class="img-responsive img-circle avatar"></picture>
                 <figcaption>
                   <blockquote>
-                    <p>Me encanta viajar, pero me gusta más conocer a otras personas. Gracias al buscador de personas puedo hacer nuevas amistades a la vez que descubro mundo.</p>
+                    <p> <i class="fa fa-quote-left fa-3x fa-pull-left"></i>Me encanta viajar, pero me gusta más conocer a otras personas. Gracias al buscador de personas puedo hacer nuevas amistades a la vez que descubro mundo".</p>
                     <footer>
                       <cite title="Testimonio">Mia Sheridan</cite>
                     </footer>
@@ -132,9 +133,8 @@
               <figure>
                 <picture><img src="images/testimonio3.jpg" alt="Testimonio 3" class="img-responsive img-circle avatar"></picture>
                 <figcaption>
-                  <blockquote>
-                    <p>Viajar, conocer mundo, conocer culturas, conocer gente.  Ahora todo es mucho más fácil y económico.</p>
-                    <p>Además hago amistades que me encanta que vengan a visitarme... no una, sino las veces que quieran.</p>
+                  <blockquote><i class="fa fa-quote-left fa-3x fa-pull-left"></i>Viajar, conocer mundo, conocer culturas, conocer gente.  Ahora todo es mucho más fácil y económico.
+                    <p>Además hago amistades que me encanta que vengan a visitarme... no una, sino las veces que quieran".</p>
                     <footer>
                       <cite title="Testimonio">John Doe</cite>
                     </footer>
