--- a/index.html
+++ b/index.html
@@ -36,16 +36,21 @@
     <header class="jumbotron img-header">
       <div class="text-head">
         <h1 class="logo-font">  CIREX</h1>
-        <h2>Intercambio cultural de emociones</h2>
-        <div><a class="btn btn-social btn-facebook btn-header"><span class="fa fa-twitter"></span>Regístrate con Facebook</a></div>
+        <h2>Circular Experience</h2>
+        <div><a class="btn btn-social btn-facebook btn-header"><span class="fa fa-facebook"></span>Regístrate con Facebook</a></div>
         <div><a class="btn btn-social btn-twitter btn-header"><span class="fa fa-twitter"></span>Regístrate con Twitter</a></div>
       </div>
     </header>
     <main class="container-fluid">
       <div id="experiencia" class="row marte">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <h2>Nuestra experiencia</h2>
-          <p>Lucas ipsum dolor sit amet skywalker aayla cade zabrak mandalorians lobot grievous skywalker hoth anakin. Qui-gonn coruscant jinn watto organa amidala jango darth mon. Antilles wampa windu palpatine skywalker jabba moff darth. Moff antilles vader mon kenobi coruscant darth padmé dantooine. Mandalorians kashyyyk wedge padmé sidious organa biggs. Coruscant sith chewbacca fisto solo. Biggs moff darth calamari ahsoka organa droid lando. Calrissian yoda jade wicket organa organa moff hutt naboo. Solo kashyyyk windu organa thrawn.</p>
+          <!--h2 Nuestra experiencia-->
+          <h2>Hospédate gratis en el lugar del mundo que tú elijas y con quien tú elijas</h2>
+          <p>
+            Cirex ofrece a nuestros clientes una forma de vivir nuevas emociones en diferentes lugares del mundo.
+            Con el gran atractivo de contar con un acompañante local y con unos gustos y aficiones similares que harán de nuestra experiencia más placentera.
+          </p>
+          <p>No sólo eso, sino que el conocer a otras personas afines llega a ser el principal motivo y el lugar, un extra.</p>
         </div>
       </div>
       <div class="row img-marte"></div>
@@ -70,21 +75,21 @@
       <div id="viaje" class="row viaje">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>El viaje</h2>
-          <p>Lucas ipsum dolor sit amet artaru dat owen naberrie kenobi boba gorog dunhausen tatooine unduli. Dagobah bail anakin even iridonian kyle darth. Qu saffa secura abregado. Chistori hutt plo hapan jan nien d8 ree-yees. Aayla massans t88 utapaun sith baba illum shawda. Gordin massassi skywalker owen. Isolder solo conan qu. Orus kasan rahm pau'an dexter. Haako nute carlist oppo r2-d2 ogemite arkanis kel. Shi'ido halla vratix kamino. Dulok daala jax balosar omwati elomin. Psadan sanyassan noa shado r4-p17 moff.</p>
+          <p>Viajar nunca había sido tan fácil y emocionante.  Crea nuevos lazos de amistad con personas de todo el mundo gracias a la facilidad de viajar con un sistema recíproco de hospedaje-guía.</p>
         </div>
       </div>
       <div class="row img-viaje"></div>
       <div class="row seguridad">
         <div class="container funcionamiento-text text-center">
           <div class="row">
-            <h2>Seguridad y tranquilidad</h2>
+            <h2>Seguridad y confianza</h2>
           </div>
           <div class="row funcionamiento-celdas">
             <div class="col-xs-12 col-md-4">
               <p>1. Seguro<br><i class="fa fa-id-card-o funcionamiento-icon"></i></p>
             </div>
             <div class="col-xs-12 col-md-4">
-              <p>2. Perfiles y valoración<br><i class="fa fa-star funcionamiento-icon"></i><i class="fa fa-star funcionamiento-icon"></i><i class="fa fa-star funcionamiento-icon"></i><i class="fa fa-star funcionamiento-icon"></i><i class="fa fa-star-half-o funcionamiento-icon"></i></p>
+              <p>2. Perfiles y valoración<br><span class="star-font"><i class="fa fa-star funcionamiento-icon"></i><i class="fa fa-star funcionamiento-icon"></i><i class="fa fa-star-half-o funcionamiento-icon"></i></span></p>
             </div>
             <div class="col-xs-12 col-md-4">
               <p>3. Atención 24h<br><i class="fa fa-volume-control-phone funcionamiento-icon"></i></p>
@@ -95,14 +100,19 @@
       <div id="testimonios" class="row testimonios">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Testimonios</h2>
-          <p>Lucas ipsum dolor sit amet artaru dat owen naberrie kenobi boba gorog dunhausen tatooine unduli. Dagobah bail anakin even iridonian kyle darth. Qu saffa secura abregado. Chistori hutt plo hapan jan nien d8 ree-yees. Aayla massans t88 utapaun sith baba illum shawda. Gordin massassi skywalker owen. Isolder solo conan qu. Orus kasan rahm pau'an dexter. Haako nute carlist oppo r2-d2 ogemite arkanis kel. Shi'ido halla vratix kamino. Dulok daala jax balosar omwati elomin. Psadan sanyassan noa shado r4-p17 moff.</p>
+          <p>Podemos explicarte mil y una maravillas de las experiencias de nuestros clientes pero nadie mejor que ellos para contároslo: </p>
           <div class="row">
             <div class="col-xs-12 col-lg-4">
               <figure>
                 <picture><img src="images/testimonio1.jpg" alt="Testimonio 1" class="img-responsive img-circle avatar"></picture>
                 <figcaption>
-                  <h3>Testimonio 1</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt excepturi nemo laboriosam illum expedita ratione molestias eaque saepe placeat, commodi aliquam, neque obcaecati possimus quae ad magnam nam vel omnis.</p>
+                  <blockquote>
+                    <p> <i class="fa fa-quote-left fa-3x fa-pull-left"></i>Tengo que reconocer que soy muy difícil de aguantar por lo que he tenido varios problemas en casas de alojamiento.</p>
+                    <p>Gracias a Cirex encuentro personas más afines a mi que no me echan de la casa a las pocas horas de conocerme".</p>
+                    <footer>
+                      <cite title="Testimonio">Sheldon Cooper</cite>
+                    </footer>
+                  </blockquote>
                 </figcaption>
               </figure>
             </div>
@@ -110,8 +120,12 @@
               <figure>
                 <picture><img src="images/testimonio2.jpg" alt="Testimonio 2" class="img-responsive img-circle avatar"></picture>
                 <figcaption>
-                  <h3>Testimonio 2</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt excepturi nemo laboriosam illum expedita ratione molestias eaque saepe placeat, commodi aliquam, neque obcaecati possimus quae ad magnam nam vel omnis.</p>
+                  <blockquote>
+                    <p> <i class="fa fa-quote-left fa-3x fa-pull-left"></i>Me encanta viajar, pero me gusta más conocer a otras personas. Gracias al buscador de personas puedo hacer nuevas amistades a la vez que descubro mundo".</p>
+                    <footer>
+                      <cite title="Testimonio">Mia Sheridan</cite>
+                    </footer>
+                  </blockquote>
                 </figcaption>
               </figure>
             </div>
@@ -119,8 +133,12 @@
               <figure>
                 <picture><img src="images/testimonio3.jpg" alt="Testimonio 3" class="img-responsive img-circle avatar"></picture>
                 <figcaption>
-                  <h3>Testimonio 3</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt excepturi nemo laboriosam illum expedita ratione molestias eaque saepe placeat, commodi aliquam, neque obcaecati possimus quae ad magnam nam vel omnis.</p>
+                  <blockquote><i class="fa fa-quote-left fa-3x fa-pull-left"></i>Viajar, conocer mundo, conocer culturas, conocer gente.  Ahora todo es mucho más fácil y económico.
+                    <p>Además hago amistades que me encanta que vengan a visitarme... no una, sino las veces que quieran".</p>
+                    <footer>
+                      <cite title="Testimonio">John Doe</cite>
+                    </footer>
+                  </blockquote>
                 </figcaption>
               </figure>
             </div>
@@ -134,14 +152,19 @@
       <div class="footer-above">
         <div class="container">
           <div class="row">
-            <div class="footer-col col-md-6">
+            <div class="footer-col col-md-4">
               <h3>Redes sociales</h3>
-              <div><a href="#" class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span></a><a href="#" class="btn btn-social-icon btn-twitter"><span class="fa fa-twitter"></span></a><a href="#" class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram"></span></a></div>
+              <div><a href="https://www.facebook.com/cirex.circularexperiencia?fref=ts" class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span></a><a href="#" class="btn btn-social-icon btn-twitter"><span class="fa fa-twitter"></span></a><a href="#" class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram"></span></a></div>
             </div>
-            <div class="footer-col col-md-6">
-              <h3>Contacto</h3>
-              <P>Se libre de contactar conmigo por cualquiera de los medios, aunque lo más rápido es mediante mi e-mail.</p></P>
+            <div class="footer-col col-md-4">
+              <h3>Política de empresa</h3><a href="#" class="link-politica">Términos y condiciones</a><br><a href="#" class="link-politica">Política de privacidad</a><br><a href="#" class="link-politica">Política de devoluciones</a><br><a href="#" class="link-politica">Menciones legales</a>
             </div>
+            <div class="footer-col col-md-4">
+              <h3>Contacto</h3><i class="fa fa-home"> </i> C\Falsa 123, Málaga<br><i class="fa fa-envelope"> </i> support@cirex.co<br><i class="fa fa-phone-square"> </i> 678 123 123
+            </div>
+          </div>
+          <div class="row">
+            <p class="footer-copy">Copyright © Cirex 2017</p>
           </div>
         </div>
       </div>
